--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,6 @@ a {
 }
 
 /* ======= Hero ======= */
-
 .hero {
   padding-top: 56px;
   background: var(--fourth-color);
@@ -126,7 +125,7 @@ a {
   display: flex;
 }
 
-.media-block {
+.hero .media-block {
   width: 48%;
 }
 
@@ -134,24 +133,73 @@ a {
   position: relative;
 }
 
-.media-block .hero-img {
+.hero .media-block .hero-img {
   width: 470px;
   height: 685px;
   border-radius: 20px;
   object-fit: cover;
 }
 
-.media-block .cards {
+.hero .media-block .cards {
   position: absolute;
   right: 0;
   bottom: 48px;
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
   width: 270px;
-  padding: 24px;
+  padding: 28px 24px;
   border-radius: 12px;
   background: var(--third-color);
+}
+
+.hero .media-block .card {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.hero .media-block .icon {
+  padding: 12px;
+  border-radius: 999px;
+}
+
+.hero .media-block .card:nth-child(1) .icon {
+  background: #fff9e8;
+}
+
+.hero .media-block .card:nth-child(2) .icon {
+  background: #fcefff;
+}
+
+.hero .media-block .card:nth-child(3) .icon {
+  background: #ebeaff;
+}
+
+.hero .media-block .label {
+  color: #5f5b53;
+
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.85;
+}
+
+.hero .media-block .title {
+  color: var(--primary-color);
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67;
 }
 
 .hero .content-block {
   padding: 64px 0 0 130px;
   width: 52%;
+}
+
+strong {
+  background: green;
+  color: red;
+  float: right;
+  padding: 20px;
+  margin-top: 20px;
 }
